<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PortfolioActivity">

    <TextView
        android:id="@+id/portfolio_text_title"
        style="@style/Portfolio_Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/portfolio_title" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/portfolio_text_title"
        android:layout_centerInParent="true">

        <android.support.v7.widget.LinearLayoutCompat
            android:id="@+id/portfolio_group_buttons"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            app:divider="@drawable/list_default_divider"
            app:showDividers="middle">

            <Button
                android:id="@+id/portfolio_button_spotify"
                style="@style/Portfolio_Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:text="@string/portfolio_button_spotify" />

            <Button
                android:id="@+id/portfolio_button_scores"
                style="@style/Portfolio_Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/portfolio_button_scores" />

            <Button
                android:id="@+id/portfolio_button_libapp"
                style="@style/Portfolio_Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/portfolio_button_libapp" />

            <Button
                android:id="@+id/portfolio_button_builditbigger"
                style="@style/Portfolio_Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/portfolio_button_builditbigger" />

            <Button
                android:id="@+id/portfolio_button_xyz"
                style="@style/Portfolio_Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/portfolio_button_xyz" />

            <Button
                android:id="@+id/portfolio_button_capstone"
                style="@style/Portfolio_Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFD50000"
                android:text="@string/portfolio_button_capstone" />

        </android.support.v7.widget.LinearLayoutCompat>

    </ScrollView>

</RelativeLayout>
